# farino3

./: README.md
custom_movit/: CMakeLists.txt  package.xml
custom_movit/config/: fairino3_gazebo_v6.xacro  fairino3_v6_robot.ros2_control.xacro  fairino3_v6_robot.srdf  fairino3_v6_robot.urdf.xacro  moveit_controllers.yaml
custom_movit/launch/: demo.launch.py  display.launch.py  fr3_gz_bringup.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
custom_movit/scripts/: inverse_kinematics.py
custom_movit/src/: ik_move_fr3.cpp  ik_test.cpp  move_fr3_server.cpp
fairino_controller/: CMakeLists.txt  package.xml  ros2_controllers.yaml
fairino_controller/config/: fairino_controllers.yaml
fairino_controller/launch/: controller.launch.py
fairino_description/: CMakeLists.txt  package.xml
fairino_description/launch/: display.launch.py  display_2.launch.py  gazebo.launch.py
fairino_description/rviz/: display.rviz  display_empty.rviz
fairino_description/urdf/: fairino10_v6_robot.urdf.xacro  fairino3_2_gazebo.xacro  fairino3_2_ros2_control.xacro  fairino3_2_v6.urdf.xacro  fairino3_v6.urdf  fairino3_v6.urdf.xacro
fairino_msgs/: CMakeLists.txt
fairino_msgs/srv/: CartesianMove.srv
